--- a/BuildingApi/Properties/launchSettings.json
+++ b/BuildingApi/Properties/launchSettings.json
@@ -29,7 +29,7 @@
         "JWT_ISSUER": "https://api.million.com",
         "JWT_AUDIENCE": "https://api.million.com",
         "JWT_KEY": "HuN3v!2KD8s93l*Pq2Ws9ZmQ5cXyRz8B",
-        "JWT_EXPIRE": "30"        
+        "JWT_EXPIRE": "30"
       },    
       "dotnetRunMessages": true,
       "applicationUrl": "https://localhost:7099;http://localhost:5162"
@@ -40,8 +40,14 @@
       "environmentVariables": {
         "ASPNETCORE_HTTPS_PORTS": "8081",
         "ASPNETCORE_HTTP_PORTS": "8080",
-        "DOCUMENTATION_ENDPOINT_SWAGGER_JSON": "/swagger/v1/swagger.json",
-        "DOCUMENTATION_INFO_TITLE": "Million Building"
+        "ASPNETCORE_ENVIRONMENT": "Development",
+        "CONFIGURATION_APPLICATION_CORS_POLICY": "http://localhost:4200",
+        "CORS_POLICY": "cors_policy",
+        "CONNECTION_STRING_DATABASE": "Server=localhost,9005;Database=million_building;User Id=sa;Password=Mayo_2025.,*;TrustServerCertificate=True;",
+        "JWT_ISSUER": "https://api.million.com",
+        "JWT_AUDIENCE": "https://api.million.com",
+        "JWT_KEY": "HuN3v!2KD8s93l*Pq2Ws9ZmQ5cXyRz8B",
+        "JWT_EXPIRE": "30"
       },
       "publishAllPorts": true,
       "useSSL": true
